### WITCH v1.0.7
1. Added example usages to `witch.py --help`. Also changed the default formatter
from a custom one to `argparse.RawDescriptionHelpFormatter`.
2. Now by default will bypass the initial WITCH setup step. Previously, this was
achieved by giving WITCH the parameter `-y` (`--bypass-setup`).
3. Changed the default behavior of `examples/run.sh` to running scenario D.

### WITCH v1.0.6
1. Added Software Output Explanation to the README to avoid confusion on what
alignment file to use for downstream analyses.

### WITCH v1.0.5
1. Added compatibility to Dendropy with version >4.5.2 and removed its requirement
from requirements.txt for pip.

### WITCH v1.0.5b
1. Added a new parameter option allowing users to specify a customized config
file to override the default `main.config` (usually can be found at
`~/.witch_msa/main.config`). Use `-c <user config file>` to do so. The priority
for arguments: `commandline > user.config > main.config`.

### WITCH v1.0.5a
1. Added two sanity checks to HMMBuild and HMMSearch jobs: making sure all files
are created correctly before proceeding.
2. Added a file number check utility function using the `inspect` package.

### WITCH v1.0.4
1. Added an additional parameter option to set an upper bound to the HMM subsets
created (`-Z`, complementary to `-A` which is for lower bound), based on the
number of sequences in a subset.
2. Changed the behavior for creating HMM subsets. Instead of reading in the
backboen alignment at once, WITCH now reads line by line to avoid large memory
consumption if the backbone is very large.
3. Changed the behavior for running HMMSearch. Now also uses my task manager to
manage the maximum amount of concurrently running jobs (instead of submitting
all at once).

### WITCH v1.0.3
1. Fixed an oversight in memory issue if the backbone alignment is large and
we are creating a lot of subsets (`gcmm/algorithm.py`).
2. Added default behavior to function `gcmm/task.py/handleFuture(...)` so that